--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "eslint-plugin-flowtype": "^3.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.3.1",
+    "redux": "^4.0.5",
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
